--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-cookies.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <script type="text/javascript" th:src="@{/app.js}"></script>
 </head>
 <body data-ng-app="code4life">
 <h2>(...) a ósmego dnia Bóg stworzył ten szablon i wiedział, że to było dobre</h2>
-    <div data-ng-controller="testCtrl">
-        {{test}}
+
+    <div>
+        <a href="#!dashboard"></a>
+    </div>
+    <div ng-view="">
     </div>
 
 </body>
