--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,23 +5,44 @@
     <title>Twitter Application</title>
 
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css"/>
+    <!--App Styles-->
+    <link rel="stylesheet" href="styles/main.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-cookies.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <script type="text/javascript" th:src="@{/app.js}"></script>
+    <script type="text/javascript" th:src="@{/ctrls/home.js}"></script>
+    <script type="text/javascript" th:src="@{/ctrls/firstFilter.js}"></script>
 </head>
 <body data-ng-app="code4life">
-<h2>(...) a ósmego dnia Bóg stworzył ten szablon i wiedział, że to było dobre</h2>
+<!--<h2>(...) a ósmego dnia Bóg stworzył ten szablon i wiedział, że to było dobre</h2>-->
 
-    <div>
-        <a href="#!dashboard"></a>
+    <div layout="column" class="nav">
+        <md-toolbar>
+
+            <div class="md-toolbar-tools">
+            <h2 md-truncate="" flex="">My App's Title</h2>
+
+            <md-button>
+                <a href="#/">Home</a>
+            </md-button>
+            <md-button>
+                <a href="#/choose-city">Search</a>
+            </md-button>
+            </div>
+
+        </md-toolbar>
+        <md-content>
+            Hello!
+        </md-content>
     </div>
-    <div ng-view="">
+
+    <div ng-view="" class="content">
     </div>
 
 </body>
