--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Twitter Application</title>
+    <title>Sprawni w pracy 2.0</title>
 
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css"/>
 
@@ -12,13 +12,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-cookies.min.js"></script>
+
     <script type="text/javascript" th:src="@{/app.js}"></script>
 </head>
 <body data-ng-app="code4life">
 <h2>(...) a ósmego dnia Bóg stworzył ten szablon i wiedział, że to było dobre</h2>
-    <div data-ng-controller="testCtrl">
-        {{test}}
+
+    <h2>Czego szukasz?</h2>
+<div data-ng-controller="testCtrl" layout="row">
+    <a href="#jobSearch">job search</a>
+
+    <md-button class="md-raised">Pracownika</md-button>
     </div>
+    <div data-ng-view=""></div>
 
 </body>
 </html>
