--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <!--App Styles-->
     <link rel="stylesheet" href="styles/main.css"/>
     <link rel="stylesheet" href="styles/home.css"/>
+    <link rel="stylesheet" href="styles/search.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
@@ -26,6 +27,7 @@
 </head>
 <body data-ng-app="code4life">
 <!--<h2>(...) a ósmego dnia Bóg stworzył ten szablon i wiedział, że to było dobre</h2>-->
+
 
     <div layout="column" class="nav">
         <md-toolbar>
