--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -1,17 +1,24 @@
+.mainContainer {
+    max-width: 1300px;
+    margin: 0 auto;
+}
+.goToJobSearcher {
+    min-width: 50%;
+    max-width: 50% !important;
+    width: 50vw;
+    height: 50vw;
+    background: url("../img/szukampracy.png");
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;
+    color: #ffffff;
+    cursor: pointer;
+}
 
-.content{
-    position: relative;
-    /*top: 150px;*/
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    height: 85%;
-}
-.nav{
-    height: 15%;
-    background-color: #fff;
-}
-md-toolbar{
-    height: 100%;
-    background-color: #fff;
+
+.logo {
+    height: auto;
+    width: 50%;
+    padding-left: 24px;
+    padding-top:24px;
 }
