--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" th:src="@{/app.js}"></script>
     <script type="text/javascript" th:src="@{/ctrls/home.js}"></script>
     <script type="text/javascript" th:src="@{/ctrls/firstFilter.js}"></script>
+    <script type="text/javascript" th:src="@{/ctrls/search.js}"></script>
 
 </head>
 <body data-ng-app="code4life">
