--- a/src/main/resources/static/styles/search.css
+++ b/src/main/resources/static/styles/search.css
@@ -1,4 +1,4 @@
-
+/* CHOOSE CITY STYLES */
 .container-choose-city{
     width: 100%;
     height: 100%;
@@ -18,6 +18,7 @@
 .container-choose-city .btn-search{
     background-color: #000;
     padding: 3px 25px;
+    color: #fff;
 }
 
 .container-choose-city label{
@@ -31,3 +32,5 @@
     border-radius: 3px;
     border: none;
 }
+/* END CHOOSE CITY STYLES */
+
