--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -1,63 +1,32 @@
-/*.container-home{*/
-    /*width: 100vw;*/
-    /*color: #fff;*/
-    /*padding: 0;*/
-    /*margin: 0;*/
-/*}*/
-
-/*.btn-home{*/
-    /*height: 100vw;*/
-    /*min-height: 100vw;*/
-    /*position: relative;*/
-    /*!*background-color: #22BFC6;*!*/
-    /*padding: 0;*/
-    /*margin: 0;*/
-    /*display: flex;*/
-    /*align-items: center;*/
-/*}*/
-
-.btn-home h1{
-    max-width: 100%;
-    width: 100%;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    font-size: 350%;
-}
-
-/*!*.btn-home:hover{*!*/
-    /*!*opacity: 0.45;*!*/
-/*!*}*!*/
-
-/*!*.btn-home:hover h1{*!*/
-    /*!*font-size: 500%;*!*/
-/*!*}*!*/
-
-/*.workers-home{*/
-    /*background-image: url("../img/szukampracy.png");*/
-    /*background-size: 100% 100%;*/
-    /*background-repeat: no-repeat;*/
-/*}*/
-
-/*.employers-home{*/
-    /*background-image: url("../img/zlecamprace.png");*/
-    /*background-size: 100% 100%;*/
-    /*background-repeat: no-repeat;*/
-/*}*/
-
-.button {
-    width: 100vw;
-    height: 40vw;
-
-}
-
-.lookingForJob {
+.jobsearch {
     background-image: url("../img/szukampracy.png");
-    background-size: contain;
-
+    background-size: cover;
+    margin: 0 auto;
+    height: 44vw;
+    background-repeat: no-repeat;
 }
 
-.lookingForEmployee {
+.divjob {
     background-image: url("../img/zlecamprace.png");
     background-size: cover;
+    margin: 0 auto;
+    height: 44vw;
+    background-repeat: no-repeat;
+}
+
+a {
+    height: inherit;
+    display: block;
+    padding: 10px;
+    margin-bottom: 1px;
+    font-size: 300%;
+    color: #ffffff;
+    text-align: center;
+    padding-top: 40%;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: rgba(255, 255, 255, .30);
+    font-size: 350%;
 }
