zaznaczanie selectów mową

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,10 +42,9 @@
 
             </div>
             <div data-flex="33" layout="row">
-                <span id="microphone-state">Wyłączona</span>
                 <script>
                     if(annyang) {
-                        document.write('<img src="../img/microoff.png" id="micbutt" onClick="startVoiceInterface();" />');
+                        document.write('<img width="40" height="40" src="../img/nosound.png" id="micbutt" onClick="startVoiceInterface();" />');
                     }
                 </script>
 
