--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,14 +41,12 @@
             <div data-flex="33">
 
             </div>
-            <div data-flex="33" layout="row">
+            <div data-flex="33" layout="row" datalayout="row" layout-align="end center">
                 <script>
                     if(annyang) {
                         document.write('<img width="40" height="40" src="../img/nosound.png" id="micbutt" onClick="startVoiceInterface();" />');
                     }
                 </script>
-
-                <md-button  class="md-raised " onClick="alert('BUTTON!');">Button</md-button>
                 <md-button  class="md-raised" onClick="alert('KONTO!');">Załóż konto</md-button>
             </div>
         </div>
