--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -8,6 +8,10 @@ html, body{
     width: 100%;
     padding: 0;
     margin: 0;
+    height: 85%;
+}
+.nav{
+    height: 15%;
 }
 .mainContainer {
     max-width: 1300px;
