--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,8 +49,8 @@
                     }
                 </script>
 
-                <md-button  class="md-raised " onClick="alert('BUTTON!');">Button</md-button>
-                <md-button  class="md-raised" onClick="alert('KONTO!');">Załóż konto</md-button>
+                <md-button  class="md-raised " onClick="routeTo('home')">Home</md-button>
+                <md-button  class="md-raised" onClick="routeTo('search')">Search</md-button>
             </div>
         </div>
         <div ng-view="" class="content">
